--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
           Vågö
         </span>
         <h1 class="location"> </h1>
-        <!-- </span>
+        <a href="homepage.html">
           <img class="home-button" src="home.svg" alt="">
-        </span> -->
+        </a>
     </div>
     <div class="embla">
         <div class="embla__container">
