--- a/homepage.html
+++ b/homepage.html
@@ -13,45 +13,52 @@
         Different context IKEA
     </h2>
     <div class="home-images"> 
-        <a id= vago; onmouseover="document.body.style.backgroundColor ='yellow'" onmouseout="document.body.style.backgroundColor ='white'" href="index.html" style="width: 340px; height: 100%;" class="link">
-            <div>
+        <a href="index.html" class="item">
+            <div >
                 <img src="vago-chair.png" alt="" class="home-image" >
                 <p class="ikea-goods">
                     PS VÅGÖ Chair, outdoor
                 </p>
             </div>
         </a>
-        <div onmouseover="document.body.style.backgroundColor ='yellow'" onmouseout="document.body.style.backgroundColor ='white'" style="width: 340px; height: 100%;">
+        <a href="" class="item">
+            <div>
             <img src="frosta.png" alt="" class="home-image">
             <p class="ikea-goods">
                 FROSTA Stool, birch plywood
             </p>
         </div>
-        <div onmouseover="document.body.style.backgroundColor ='yellow'" onmouseout="document.body.style.backgroundColor ='white'" style="width: 340px; height: 100%;">
-            <img src="lack.png" alt="" class="home-image">
-            <p class="ikea-goods">
-                LACK Side table 
-            </p>
-        </div>
-        <div onmouseover="document.body.style.backgroundColor ='yellow'" onmouseout="document.body.style.backgroundColor ='white'" style="width: 340px; height: 100%;">
-            <img src="frakta.png" alt="" class="home-image">
-            <p class="ikea-goods">
-                FRAKTA Shopping bag, blue
-            </p>
-        </div>
-        <div onmouseover="document.body.style.backgroundColor ='yellow'" onmouseout="document.body.style.backgroundColor ='white'" style="width: 340px; height: 100%;">
+        </a>
+        <a href="" class="item">
+            <div>
+                <img src="lack.png" alt="" class="home-image">
+                <p class="ikea-goods">
+                    LACK Side table 
+                </p>
+            </div>
+        </a>
+        <a href="frakta.html" class="item">
+            <div>
+                <img src="frakta.png" alt="" class="home-image">
+                <p class="ikea-goods">
+                    FRAKTA Shopping bag, blue
+                </p>
+            </div>
+        </a>
+        <div class="item">
             <img src="vago-chair.png" alt="" class="home-image">
             <p class="ikea-goods">
                 PS VÅGÖ Chair, outdoor, 
                 white 
             </p>
         </div>
-        <div onmouseover="document.body.style.backgroundColor ='yellow'" onmouseout="document.body.style.backgroundColor ='white'" style="width: 340px; height: 100%;">
+        <div class="item">
             <img src="plates.png" alt="" class="home-image">
             <p class="ikea-goods">
                 Plates
             </p>
         </div>
     </div>
+    <script src="home-page.js"></script>
 </body>
 </html>
