--- a/homepage.html
+++ b/homepage.html
@@ -17,7 +17,7 @@
             <div >
                 <img src="vago-chair.png" alt="" class="home-image" >
                 <p class="ikea-goods">
-                    PS VÅGÖ Chair, outdoor
+                    PS VÅGÖ Chair
                 </p>
             </div>
         </a>
@@ -25,7 +25,7 @@
             <div>
             <img src="frosta.png" alt="" class="home-image">
             <p class="ikea-goods">
-                FROSTA Stool, birch plywood
+                FROSTA Stool
             </p>
         </div>
         </a>
@@ -41,15 +41,14 @@
             <div>
                 <img src="frakta.png" alt="" class="home-image">
                 <p class="ikea-goods">
-                    FRAKTA Shopping bag, blue
+                    FRAKTA Shopping bag
                 </p>
             </div>
         </a>
         <div class="item">
             <img src="vago-chair.png" alt="" class="home-image">
             <p class="ikea-goods">
-                PS VÅGÖ Chair, outdoor, 
-                white 
+                PS VÅGÖ Chair
             </p>
         </div>
         <div class="item">
@@ -58,6 +57,14 @@
                 Plates
             </p>
         </div>
+    </div>
+    <div class='about'>
+        <h3>
+            IKEA&nbsp;&mdash; везде. Когда я&nbsp;оказываюсь в&nbsp;путешествии и&nbsp;арендую квартиру на&nbsp;Airbnb, да&nbsp;даже если я&nbsp;просто останавливаюсь у&nbsp;знакомых или по&nbsp;каучсерфингу, я&nbsp;всегда встречаю вещи из&nbsp;IKEA в&nbsp;квартирах, комнатах и&nbsp;домах. 
+        </h3>
+        <h3>
+            Товары из&nbsp;IKEA недорогие и&nbsp;доступные, их&nbsp;легко купить, и&nbsp;при этом они выглядят приятно и&nbsp;лаконично. Они в&nbsp;какой-то степени обезличенны и&nbsp;нейтральны из-за простых форм и&nbsp;сочетаний цветов. Ценность&nbsp;же приобретается благодаря контексту, который товары получают в&nbsp;тот момент, как только пропадают с&nbsp;полок. Они начинают приобретать свою наполненность благодаря тому, что находится и&nbsp;происходит рядом. Так, один стул из&nbsp;Швеции может найти себя в&nbsp;разных локациях по&nbsp;всему миру. Но&nbsp;каждый раз это будет разный стул, потому что меняется не&nbsp;только географическое положение, но&nbsp;и&nbsp;отношение к&nbsp;вещи, культура, окружение, люди&nbsp;&mdash; меняется контекст.
+        </h3>
     </div>
     <script src="home-page.js"></script>
 </body>
