--- a/hemler.html
+++ b/hemler.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plates</title>
+    <title>Helmer</title>
 </head>
 <link rel="stylesheet" href="lack-style.css">
 <link rel="stylesheet" href="fonts.css">
 <body style="background-color: #f4f4f4;">
     <div class="title">
         <span class="ikea-goods">
-          Plates
+          Helmer
         </span>
         <h1 class="location"> </h1>
         <a href="homepage.html">
@@ -39,6 +39,6 @@
             </svg>
           </button>
       <script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js"></script>
-      <script src="plates-slider.js"></script>
+      <script src="hemler-slider.js"></script>
 </body>
 </html>
