--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Different context IKEA</title>
     <link rel="stylesheet" href="homepage-styles.css">
     <link rel="stylesheet" href="fonts.css">
 </head>
@@ -45,12 +45,14 @@
                 </p>
             </div>
         </a>
-        <div class="item">
-            <img src="vago-chair.png" alt="" class="home-image">
-            <p class="ikea-goods">
-                PS VÅGÖ Chair
-            </p>
-        </div>
+        <a href="hemler.html" class="item">
+            <div>
+                <img src="helmer.png" alt="" class="home-image">
+                <p class="ikea-goods">
+                    HELMER Drawer unit on&nbsp;casters
+                </p>
+            </div>
+        </a>
         <a href="plates.html" class="item">
             <div>
                 <img src="plates.png" alt="" class="home-image">
